Typographies et couleurs de l'article 1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="accueil">
     <header>
-        <h1><a href="index.html">Black Digital</a></h1>
+        <h1><a href="index.html" class="logo">Black Digital</a></h1>
         <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
             <div class="nav-toggle-bar"></div>
         </div>
