Modifications autres-projets.html

--- a/autres-projets.html
+++ b/autres-projets.html
@@ -38,56 +38,74 @@
         <ul class="projets">
             <li class="projet zakaria-chikhi">
                 <img src="img/logo-zakaria-chikhi.png" alt="Logo du projet de Zakaria Chikhi">
-                <a href="http://projets1.sarutobi.fr">Zakaria Chikhi</a>
-                <a href="http://projets1.sarutobi.fr"><cite>Aux Yeux de Tous</cite></a>
+                <a href="http://projets1.sarutobi.fr">
+                    <span class="name">Zakaria Chikhi</span>
+                    <cite>Aux Yeux de Tous</cite>
+                </a>
             </li>
 
             <li class="projet benoit-claude">
                 <img src="img/logo-benoit-claude.png" alt="Logo du projet de Benoît Claude">
-                <a href="http://projets1.benclaude.fr">Benoît Claude</a>
-                <a href="http://projets1.benclaude.fr"><cite>Snowden</cite></a>
+                <a href="http://projets1.benclaude.fr">
+                    <span class="name">Benoît Claude</span>
+                    <cite>Snowden</cite>
+                </a>
             </li>
 
             <li class="projet agathe-clement">
                 <img src="img/logo-agathe-clement.png" alt="Logo du projet d'Agathe Clément">
-                <a href="http://projets1.nikaiaa.fr">Agathe Clément</a>
-                <a href="http://projets1.nikaiaa.fr"><cite>Unfriended</cite></a>
+                <a href="http://projets1.nikaiaa.fr">
+                    <span class="name">Agathe Clément</span>
+                    <cite>Unfriended</cite>
+                </a>
             </li>
 
             <li class="projet jules-crevoisier">
                 <img src="img/logo-jules-crevoisier.png" alt="Logo du projet de Jules Crevoisier">
-                <a href="http://projets1.raptorrouge.fr">Jules Crevoisier</a>
-                <a href="http://projets1.raptorrouge.fr"><cite>Iron Man 2</cite></a>
+                <a href="http://projets1.raptorrouge.fr">
+                    <span class="name">Jules Crevoisier</span>
+                    <cite>Iron Man 2</cite>
+                </a>
             </li>
 
             <li class="projet natacha-deguenon">
                 <img src="img/logo-natacha-deguenon.png" alt="Logo du projet de Natacha Deguenon">
-                <a href="http://projets1.">Natacha Deguenon</a>
-                <a href="http://projets1."><cite>The Social Network</cite></a>
+                <a href="http://projets1.">
+                    <span class="name">Natacha Deguenon</span>
+                    <cite>The Social Network</cite>
+                </a>
             </li>
 
             <li class="projet jean-deleage">
                 <img src="img/logo-jean-deleage.png" alt="Logo du projet de Jean Deléage">
-                <a href="http://projets1.jeandeleage.fr">Jean Deléage</a>
-                <a href="http://projets1.jeandeleage.fr"><cite>Her</cite></a>
+                <a href="http://projets1.jeandeleage.fr">
+                    <span class="name">Jean Deléage</span>
+                    <cite>Her</cite>
+                </a>
             </li>
 
             <li class="projet thibaud-detony">
                 <img src="img/logo-thibaud-detony.png" alt="Logo du projet de Thibaud Detony">
-                <a href="http://projets1.sozu.fr">Thibaud Detony</a>
-                <a href="http://projets1.sozu.fr"><cite>Wall-E</cite></a>
+                <a href="http://projets1.sozu.fr">
+                    <span class="name">Thibaud Detony</span>
+                    <cite>Wall-E</cite>
+                </a>
             </li>
 
             <li class="projet damien-dubosque">
                 <img src="img/logo-damien-dubosque.png" alt="Logo du projet de Damien Dubosque">
-                <a href="http://projets1.dbsqdamien.fr">Damien Dubosque</a>
-                <a href="http://projets1.dbsqdamien.fr"><cite>Unfriended</cite></a>
+                <a href="http://projets1.dbsqdamien.fr">
+                    <span class="name">Damien Dubosque</span>
+                    <cite>Unfriended</cite>
+                </a>
             </li>
 
             <li class="projet hamza-el-kinani">
                 <img src="img/logo-hamza-el-kinani.png" alt="Logo du projet de Hamza El Kinani">
-                <a href="http://projets1.nakmuay25.fr">Hamza El Kinani</a>
-                <a href="http://projets1.nakmuay25.fr"><cite>Smithereens</cite></a>
+                <a href="http://projets1.nakmuay25.fr">
+                    <span class="name">Hamza El Kinani</span>
+                    <cite>Smithereens</cite>
+                </a>
             </li>
         </ul>
     </main>
