Mise en forme du menu avec menu.css

--- a/autres-projets.html
+++ b/autres-projets.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lacie, une pollueuse inconsciente</title>
     <link rel="stylesheet" href="css/mescss/styles-typographies-couleurs.css">
+    <link rel="stylesheet" href="css/mescss/menu.css">
 </head>
 
 <body class="autres-projets">
@@ -16,7 +17,7 @@
             <div class="nav-toggle-bar"></div>
         </div>
         <nav class="menu">
-            <ul>
+            <ul class="nav-principale">
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="nosedive-et-la-surconsommation-des-reseaux-sociaux.html">Nosedive et la surconsommation des réseaux sociaux</a></li>
                 <li><a href="lacie-une-pollueuse-inconsciente.html">Lacie, une pollueuse inconsciente</a></li>
