Styles graphiques de index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Black Digital</title>
     <link rel="stylesheet" href="css/mescss/styles-typographies-couleurs.css">
     <link rel="stylesheet" href="css/mescss/menu.css">
+    <link rel="stylesheet" href="css/mescss/styles-graphiques.css">
 </head>
 
 <body class="accueil">
