--- a/lacie-une-pollueuse-inconsciente.html
+++ b/lacie-une-pollueuse-inconsciente.html
@@ -8,6 +8,7 @@
     <title>Lacie, une pollueuse inconsciente</title>
     <link rel="stylesheet" href="css/mescss/styles-typographies-couleurs.css">
     <link rel="stylesheet" href="css/mescss/menu.css">
+    <link rel="stylesheet" href="css/mescss/styles-graphiques.css">
 </head>
 
 <body class="lacie-une-pollueuse-inconsciente">
