--- a/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
+++ b/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
@@ -8,6 +8,7 @@
     <title>Nosedive et la surconsommation des réseaux sociaux</title>
     <link rel="stylesheet" href="css/mescss/styles-typographies-couleurs.css">
     <link rel="stylesheet" href="css/mescss/menu.css">
+    <link rel="stylesheet" href="css/mescss/styles-graphiques.css">
 </head>
 
 <body class="nosedive-et-la-surconsommation-des-reseaux-sociaux">
