--- a/a-propos.html
+++ b/a-propos.html
@@ -8,6 +8,7 @@
     <title>A propos</title>
     <link rel="stylesheet" href="css/mescss/styles-typographies-couleurs.css">
     <link rel="stylesheet" href="css/mescss/menu.css">
+    <link rel="stylesheet" href="css/mescss/styles-graphiques.css">
 </head>
 
 <body class="a-propos">
