Mise en forme du footer (PROBLÈME À RÈGLER)

--- a/autres-projets.html
+++ b/autres-projets.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/mescss/styles-typographies-couleurs.css">
     <link rel="stylesheet" href="css/mescss/menu.css">
     <link rel="stylesheet" href="css/mescss/styles-graphiques.css">
+    <link rel="stylesheet" href="css/mescss/styles-mise-en-page.css">
 </head>
 
 <body class="autres-projets">
