Carrousel pure CSS

--- a/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
+++ b/nosedive-et-la-surconsommation-des-reseaux-sociaux.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/mescss/menu.css">
     <link rel="stylesheet" href="css/mescss/styles-graphiques.css">
     <link rel="stylesheet" href="css/mescss/styles-mise-en-page.css">
+    <link rel="stylesheet" href="css/mescss/carrousel.css">
 </head>
 
 <body class="nosedive-et-la-surconsommation-des-reseaux-sociaux">
