Mise en page des images de l'article 3

--- a/des-solutions-envisageables.html
+++ b/des-solutions-envisageables.html
@@ -100,7 +100,7 @@
             <div class="article-3 partie-3">
                 <h3>Vous polluez quotidiennement</h3>
 
-                <video controls>
+                <video controls width="100%">
                     <source src="" type="">
                 </video>
 
@@ -157,7 +157,7 @@
                     Alors tentez d’agir en conséquence.</p>
 
                 <figure>
-                    <img src="img/illustration-main-sauve-la-terre.jpg" alt="Illustration d'une main qui tient une plante qui pousse avec un message d'espoir">
+                    <img src="img/illustration-main-sauve-la-terre.png" alt="Illustration d'une main qui tient une plante qui pousse avec un message d'espoir">
                     <figcaption>Main tenant une plante qui
                         pousse, <cite>Pinterest</cite></figcaption>
                 </figure>
