Mise en page des images de l'accueil et des boutons

--- a/index.html
+++ b/index.html
@@ -50,30 +50,36 @@
 
         <p>Venez découvrir pourquoi grâce à votre site
             préféré : <span class="bold">Black Digital</span>.</p>
-        <img src="img/fleche-bas.png" alt="Flèche vers le bas">
+        <img src="img/fleche-bas.png" alt="Flèche vers le bas" id="fleche-bas">
 
         <div class="nav-autres-pages">
             <div id="nav-article-1">
                 <h2>Nosedive et la surconsommation des
                     réseaux sociaux</h2>
-                <img src="img/affiche-episode-nosedive-black-mirror.jpg" alt="Affiche de l'épisode 1 de la saison 3 de Black Mirror, Nosedive">
+                <figure>
+                    <img src="img/affiche-episode-nosedive-black-mirror.jpg" alt="Affiche de l'épisode 1 de la saison 3 de Black Mirror, Nosedive">
+                </figure>
                 <p id="tweet article-1"><cite>Black Mirror</cite> émet une critique cinématographique de
                     différents aspects des médias sociaux.</p>
                 <a href="nosedive-et-la-surconsommation-des-reseaux-sociaux.html" class="bouton">Voir plus</a>
             </div>
 
             <div id="nav-article-2">
-            <h2>Lacie, une pollueuse inconsciente</h2>
-            <img src="img/illustration-fille-like-reseaux-sociaux.png" alt="Fille en train de liker sur les réseaux sociaux">
-            <p id="tweet article-2">Les réseaux sociaux, quelles conséquences
-                environnementales sur notre monde moderne ? Vous
-                n’allez pas en croire vos yeux.</p>
-            <a href="lacie-une-pollueuse-inconsciente.html" class="bouton">Voir plus</a>
+                <h2>Lacie, une pollueuse inconsciente</h2>
+                <figure>
+                    <img src="img/illustration-fille-like-reseaux-sociaux.png" alt="Fille en train de liker sur les réseaux sociaux">
+                </figure>
+                <p id="tweet article-2">Les réseaux sociaux, quelles conséquences
+                    environnementales sur notre monde moderne ? Vous
+                    n’allez pas en croire vos yeux.</p>
+                <a href="lacie-une-pollueuse-inconsciente.html" class="bouton">Voir plus</a>
             </div>
 
             <div id="nav-article-3">
                 <h2>Des solutions envisageables ?</h2>
-                <img src="img/ordinateur-portable.jpg" alt="Ordinateur portable en train de se fermer">
+                <figure>
+                    <img src="img/ordinateur-portable.jpg" alt="Ordinateur portable en train de se fermer">
+                </figure>
                 <p id="tweet article-3">Vous voulez agir pour une utilisation du numérique plus
                     écologique ? Découvrez comment cela est possible.</p>
                 <a href="des-solutions-envisageables.html" class="bouton">Voir plus</a>
