Mise en page de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
         <h1>Black Digital</h1>
-        <p class="tagline">Pour un numérique moins black<p>
+        <p class="tagline">Pour un numérique moins black</p>
         <p>L'usage fréquent des <strong>réseaux sociaux</strong> et les
             <strong>problèmes</strong> qu'ils impliquent est très bien illustré
             dans <strong><cite class="bold">Nosedive</cite></strong>, issue de la série <strong><cite class="bold">Black Mirror</cite></strong>.
