Mise en ligne de la vidéo MicroVisio

--- a/des-solutions-envisageables.html
+++ b/des-solutions-envisageables.html
@@ -100,8 +100,9 @@
             <div class="article-3 partie-3">
                 <h3>Vous polluez quotidiennement</h3>
 
-                <video controls width="100%">
-                    <source src="" type="">
+                <video controls width="100%" height="auto">
+                    <source src="video/microvisio-effets-nefastes-reseaux-sociaux.mp4" type="video/mp4">
+                    <p>Votre naviguateur ne prend pas en charge les vidéos HTML5.</p>
                 </video>
 
                 <p>Vous n’en n’avez pas conscience. Mais le moindre mail,
